--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "scrolltrigger": "^1.0.1"
+    "react-router-dom": "^6.24.0",
+    "react-slick": "^0.30.2",
+    "scrolltrigger": "^1.0.1",
+    "smooth-scrollbar-react": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
